# humbaba

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml  model.yml  release.yml
docs/: BACKLOG.md  CI_RUNNERS.md  DEVELOPMENT.md  HOST_COMPATIBILITY.md  LINUX.md  WINDOWS.md
packaging/: Info.plist.in  README.md  make_pkg.sh  ofx_exports.macos.sym  ofx_exports.map
src/: AnyCalibEngine.cpp  AnyCalibEngine.h  DepthAnything3Plugin.cpp  DepthEngine.cpp  DepthEngine.h  LensDistortionPlugin.cpp  LensModel.cpp  LensModel.h  MoGeEngine.cpp  MoGeEngine.h  MoGePlugin.cpp  OrtAccel.h  Register.h  WinLoader.cpp
test-assets/: README.md
tests/: ort_check.cpp
tests/natron/: README.md  check_plugin.py  make_test_image.py  render_depth.py  render_passthrough.py
tools/: README.md  _da3_compat.py  export_anycalib.py  export_onnx.py  fetch_models.ps1  fetch_models.sh  quantize_int8.py  requirements.txt  validate_onnx.py
